--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1157,9 +1157,9 @@ source={Scopus},
 @misc{drutes,
   author = {Kuraz, Michal and Mayer, Petr and J. R. Bl\"ocher },
   title = {{DRUtES} -- an opensource library for solving coupled nonlinear convection-diffusion-reaction equations,},
-  year = 2008,
+  year = 2022,
   url = {http://www.drutes.org},
-  note = {Development version 2018, \newline \url{http://www.drutes.org}~~} 
+  note = {Development version 2022, \newline \url{http://www.drutes.org}~~} 
 }
 
 @misc{dumux,
@@ -2185,3 +2185,11 @@ author = "J. Pape\v{z} and J. Liesen and Z. Strako\v{s}",
 keywords = "Numerical solution of partial differential equations, Finite element method, Adaptivity, A posteriori error analysis, Discretization error, Algebraic error, Spatial distribution of the error",
 abstract = "In the adaptive numerical solution of partial differential equations, local mesh refinement is used together with a posteriori error analysis in order to equilibrate the discretization error distribution over the domain. Since the discretized algebraic problems are not solved exactly, a natural question is whether the spatial distribution of the algebraic error is analogous to the spatial distribution of the discretization error. The main goal of this paper is to illustrate using standard boundary value model problems that this may not hold. On the contrary, the algebraic error can have large local components which can significantly dominate the total error in some parts of the domain. The illustrated phenomenon is of general significance and it is not restricted to some particular problems or dimensions. To our knowledge, the discrepancy between the spatial distribution of the discretization and algebraic errors has not been studied in detail elsewhere."
 }
+
+@book{harr-1962,
+  title={Groundwater and seepage},
+  author={Harr, M. E.},
+  isbn={56789-MP-9876}, 
+  year={1962},
+  publisher={McGraw-Hill Book Company New York}
+  }
