--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -2193,3 +2193,20 @@ abstract = "In the adaptive numerical solution of partial differential equations
   year={1962},
   publisher={McGraw-Hill Book Company New York}
   }
+
+  
+  @article{iden-2021,
+author = {Iden, Sascha C. and Blöcher, Johanna R. and Diamantopoulos, Efstathios and Durner, Wolfgang},
+title = {Capillary, Film, and Vapor Flow in Transient Bare Soil Evaporation (1): Identifiability Analysis of Hydraulic Conductivity in the Medium to Dry Moisture Range},
+journal = {Water Resources Research},
+volume = {57},
+number = {5},
+pages = {e2020WR028513},
+keywords = {evaporation, hydraulic conductivity, film flow, soil hydraulic properties, vapor flow, water retention curve},
+doi = {https://doi.org/10.1029/2020WR028513},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2020WR028513},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/2020WR028513},
+note = {e2020WR028513 2020WR028513},
+abstract = {Abstract Evaporation experiments are frequently used to determine soil hydraulic properties. We simulated laboratory evaporation experiments with a coupled water, vapor, and heat flow model which includes the surface energy balance. The simulations are performed with different parametrizations of soil hydraulic properties with a focus on soil hydraulic conductivity in medium to dry soil. In previous studies, conductivity in this moisture range has been shown to be influenced not only by water flow in completely filled capillaries (“capillary flow”) but also by film and corner flow (“film flow”). Our forward simulations highlight the strong influence of an increased conductivity caused by film flow on evaporation rate, cumulative water loss, soil temperature, and soil water pressure head during evaporation. Film flow extends the duration of stage-1 evaporation and increases the evaporation rate during stage-2 even if all other physical material properties are the same. The simulated data were used in inverse simulations with the Richards equation to test whether soil hydraulic properties can be identified without bias. This is a priori questionable because the Richards equation is an isothermal flow model and simplifies the true physics considerably, by ignoring thermal liquid and thermal vapor fluxes, as well as temperature effects on the hydraulic properties. Our results show that the identification of the water retention and hydraulic conductivity curves is bias-free for media with and without film flow. We conclude that the Richards equation can be safely used to identify hydraulic properties from evaporation experiments by inverse modeling.},
+year = {2021}
+}
