--- a/letter.tex
+++ b/letter.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt]{letter}
+\documentclass[a4paper,12pt]{letter}
 \usepackage[utf8]{inputenc}
 \usepackage{fullpage}
 
@@ -9,37 +9,37 @@
 
 Dear reviewer,
 
-we greatly appreciate your effort and your comments you have addressed to our manuscript. We have taken your recommendations seriously and focused particularly on re-writing the theoretical part. Several imprecise statements you have pointed out were either removed or corected. For your comfort we have generated apart the clean manuscript also a document, where all changes from the previous submmission are clearly highlighted.
+we greatly appreciate your effort and your comments you have addressed to our manuscript. We have taken your recommendations seriously and focused particularly on re-writing the theoretical part. Several imprecise statements you have pointed out were either removed or corrected. For your comfort, in addition to the clean manuscript, we have also generated a document, where all changes from the previous submission are clearly highlighted.
 
 \begin{itemize}
 \item {\it Richards' equation, the pivotal equation of the study (l.82,83 and
   even before), is not presented explicitly in the definite form. It
-  should be given, preferably using Cartesian coordinates.} -- We understand this objection. Parcularly, it doesn't make much sense to derive Richards equation in this type of paper, since this is just well-known process. We just want to highlight the difference between the Richards equation for cartesian coordinates and cylyndric coordinates, and so we are now presenting Richards equation in divergence form, then we come up with the Richards equation in cartesian coordinates for three-dimensional problems, and then we finalize with Richards equation for rotationally symmetric flow in cylindric coordinates.
-  \item {\it  The volume function (l. 129) is vague. Is it the water content?} Tes, for unsaturated medium, this should be the water content, however, we have decided to remove this equation since it si simply not needed here. Potential readers of this paper are very well aware of what the law of mass conservation is.
+  should be given, preferably using Cartesian coordinates.} -- We understand this objection. Particularly, it doesn't make much sense to derive the Richards equation in this type of paper, since this is a well-known process. We want to highlight the difference between the Richards equation for Cartesian coordinates and cylindrical coordinates, and so we are now presenting Richards equation in divergence form, then we come up with the Richards equation in Cartesian coordinates for three-dimensional problems, and then finally we present the Richards equation for rotationally symmetric flow in cylindrical coordinates.
+  \item {\it  The volume function (l. 129) is vague. Is it the water content?} Yes, for unsaturated medium, this should be the water content, however, we have decided to remove this equation since it is simply not needed here. Potential readers of this paper are very well aware of what the law of mass conservation is.
   \item {\it Eq. (2) (l. 128) and consequently the reference (l. 127) are
   superfluous.} Exactly as mentioned above, this equation is not needed here and was removed.
   \item {\it Eq (3) (l. 134). The specific storage requires definition. The
   question 'How is it here?' arises out of the remark "this parameter
   is often neglected", refer also to the text in (l. 387). Richards'
   equation is well known, it is not necessary to derive it. It suffices
-  to state: Richards' equation in cylindrical coordinates reads ...} Since the specific storage is finally not used in our calibration process, and as well we haven't heard about any single contribution, where the authors would use this parameter for this type of modeling problem, we completely removed specific storage from our Richards equation. Finally, it was only creating a confusement.
+  to state: Richards' equation in cylindrical coordinates reads ...} Since the specific storage is finally not used in our calibration process, and as well we haven't so far heard about any contribution, where the authors would use this parameter for this scale of modeling problem, we completely removed the specific storage from our Richards equation. Finally, it was only creating confussion.
   \item {\it  (l. 89-96). I am missing any comment concerning the value of the
-  residual water content.} We agree that if we specify in general all SHP parameters  without the residual water content, we are then incomplete, and our paper would be then susceptible for a critism. Following your recommendation, we included the residual water content into the parameters specification paragraph.
+  residual water content.} We agree that if we specify in general all SHP parameters  without the residual water content, we are then incomplete, and our paper would be then susceptible to criticism. Following your recommendation, we included the residual water content into the  paragraph specifying the parameters.
   \item {\it (l. 140-141). "It is then apparent ..." This assertion requires
-  proof.} We fully agree with your objection and we have now reformulated the paragraph, and added a proof. It is now present on lines 146-153. We haven't presented the proof in a way of mathematical proof, our proof is based on expectations of the flow physics.
+  proof.} We fully agree with your objection and we have now reformulated the paragraph, and added a proof. It is now present on lines 146-153. We haven't presented the proof in a way of a mathematical proof, our proof is based on the description of flow physics.
   \item {\it (l. 177-179). "The potential implication of this assumption is that
   the groundwater aquifer adsorbs the entire infiltrated amount without
   affecting its volume. In theory, this assumption is non-physical."
   This cannot be accepted. The aquifer is a geological body. In our
   case, the aquifer is unsaturated and both the period and the seepage
-  velocity are limited.} We fully agree that this formulation was rather slopy, and was removed from our current manuscript version. We believe that it just enough if we formulate that "With the duration of the SR infiltration experiment, and the volume of water added to the soil, the groundwater table is not affected."
+  velocity are limited.} We fully agree that this formulation was rather sloppy, and was removed from our current manuscript version. We believe that it just enough if we formulate that "With the duration of the SR infiltration experiment, and the volume of water added to the soil, the groundwater table is not affected."
   \end{itemize}
   
-  We greatly appreciated all given comments, and we have a strong believe that it helped us to achieve a better level of your research presentation.
+  We greatly appreciated all given comments, and we strongly believe that it helped us to achieve a better level of our research presentation. We are open for further discussions and recommendations if needed.
   
   \begin{center} 
   
-  best regards
+  Best regards
   \end{center}
   
   \flushright Michal Kuraz, PhD. \\
