--- a/letter.tex
+++ b/letter.tex
@@ -9,7 +9,9 @@
 
 Dear reviewer,
 
-we greatly appreciate your effort and your comments you have addressed to our manuscript. We have taken your recommendations seriously and focused particularly on re-writing the theoretical part. Several imprecise statements you have pointed out were either removed or corrected. For your comfort, in addition to the clean manuscript, we have also generated a document, where all changes from the previous submission are clearly highlighted.
+we greatly appreciate your effort and your comments you have addressed to our manuscript. We have taken your recommendations seriously and focused particularly on re-writing the theoretical part. Several imprecise statements you have pointed out were either removed or corrected.
+
+% For your comfort, in addition to the clean manuscript, we have also generated a document, where all changes from the previous submission are clearly highlighted.
 
 \begin{itemize}
 \item {\it Richards' equation, the pivotal equation of the study (l.82,83 and
